tests/errors/codegen/fortran_non_blocking/issue_1339.py
@types('int')
@types('int[:]')
def f(a):
    return a+3
